@@ -47,5 +47,6 @@ EBUILD calculate-sources-2.6.39.4-r1.ebuild 746 RMD160 67ca1ff5ab4d3d593ab50efae
 EBUILD calculate-sources-2.6.39.4.ebuild 744 RMD160 4d0334c6dd67a0a89aabb809239e79f52c4941cb SHA1 18a81f5fc9d309104dff70d96d46b5cb161c1492 SHA256 e997164cc8fcf5fd474c39cf35e518dea55878e4131a4037248aaf79cae9d3c7
 EBUILD calculate-sources-3.0.4-r1.ebuild 780 RMD160 ed57d18c20396014b8dfed9387403fd6a087e213 SHA1 f02ea4abc04dc0d00ec6defbf21ada08fc365cd7 SHA256 c34d92ae87a0d837d6e2450cc1fb8b5063292e7186305bbbe9ec81f841dd5bee
 EBUILD calculate-sources-3.0.4-r2.ebuild 1100 RMD160 18c12ef1c4c94074d41731a1281a4c3241222dbc SHA1 c880535862cc708ba1e470d316e6932295f140ec SHA256 1ad3eb8e29a871ab6b6f2355da1e160a12026194adf49aadf5f5475606a3dcab
-MISC ChangeLog 7628 RMD160 1ddbca934ab85c95273aa488759ed64eb9cff4c1 SHA1 f7dbf5c6e1f751a89b7abe99f0b39d33d9dd4b5a SHA256 bbd8db2fc9698d209d453076d5289635986ccb23df8803a6f1251979c244f2d2
+EBUILD calculate-sources-3.0.4-r3.ebuild 1115 RMD160 9b9e78d8c826ebed7e607afe8d31331e145551d9 SHA1 33ff57d0a5403880b1737b1859e916520d6f1754 SHA256 22e6ab5f8270098e8f4fd1731664f723f0051f61729943430b35d84c1d94ae56
+MISC ChangeLog 7819 RMD160 c2e3e0abdb2e2c581385123d019915435996f13d SHA1 a33270204391a11a16a469e818714ae2c28ebe81 SHA256 4a2d391d650f80c094cc24fbfc50e7bc9466f44ba8155e47da55fdc9475bd692
 MISC metadata.xml 602 RMD160 7ee32e8200b5e17bc717c6aac420bd7902692344 SHA1 da2c0d41e14c0038639c9bd8f59a0b094cb9ae49 SHA256 2b222337597cf63fdd23baa8e278b8c62e4ee2e6d65e92dd52253a857e48913d
